api/deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    app.kubernetes.io/instance: api
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: api
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: api
    spec:
      containers:
      - name: api
        image: api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8090
        resources:
          requests:
            cpu: 30m
            memory: 50Mi

...
