api/deploy/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: api
    port: 80
    targetPort: 8090
  selector:
    app.kubernetes.io/instance: api

...
